[gd_scene load_steps=3 format=3 uid="uid://c3s726pspc5c3"]

[ext_resource type="Script" path="res://Menu.gd" id="1_abhay"]
[ext_resource type="PackedScene" uid="uid://04smloyspbcj" path="res://Player.tscn" id="2_ad7a5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abhay")

[node name="Player" parent="." instance=ExtResource("2_ad7a5")]
visible = false
layout_mode = 1

[node name="Menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="host" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 83.0
offset_top = 273.0
offset_right = 247.0
offset_bottom = 340.0
text = "Host"

[node name="connect" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 306.0
offset_top = 273.0
offset_right = 458.0
offset_bottom = 336.0
text = "Connect"

[node name="IP" type="LineEdit" parent="Menu"]
layout_mode = 0
offset_left = 307.0
offset_top = 350.0
offset_right = 458.0
offset_bottom = 381.0
placeholder_text = "IP"

[node name="Name" type="LineEdit" parent="Menu"]
layout_mode = 0
offset_left = 164.0
offset_top = 187.0
offset_right = 359.0
offset_bottom = 230.0
text = "Bob"
placeholder_text = "InsertName"

[node name="NameList" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 339.0
offset_top = 188.0
offset_right = 518.0
offset_bottom = 469.0

[node name="Begin" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 260.0
offset_top = 438.0
offset_right = 312.0
offset_bottom = 469.0
text = "Begin"

[node name="Categories" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 184.0
offset_right = 159.0
offset_bottom = 385.0

[connection signal="pressed" from="Menu/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="Begin" to="." method="_on_begin_pressed"]
